test/indexReplace6.slq

def main(){
	a:=(1,0,1,1,0,0,1,1,0):ğ”¹^9;
	def f(x:ğ”¹,y:ğ”¹,z:ğ”¹)qfreeâ‡’((x,z),y);
	def g(x:(ğ”¹^2)Ã—ğ”¹,y:(ğ”¹^2)Ã—ğ”¹,z:(ğ”¹^2)Ã—ğ”¹)qfreeâ‡’(x,(z,y));
	g(f(a[0],a[1],a[2]),f(a[3],a[4],a[5]),f(a[6],a[7],a[8])):= /// error
		g(f(a[8],a[7],a[6]),f(a[5],a[4],a[3]),f(a[2],a[1],a[8])); /// error
	return a;
}
